# Merino

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  ROADMAP.md  TODO.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: themes.json
src-tauri/src/: ai.rs  commands.rs  lib.rs  main.rs  models.rs  paths.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/ai/application/: chat.rs  create.rs  delete.rs  get.rs  mod.rs  send_to_front.rs
src-tauri/src/features/ai/domain/: ai.rs  mod.rs  repository.rs
src-tauri/src/features/ai/infrastructure/: genai_repository.rs  mod.rs  tauri_commands.rs
src-tauri/src/features/folders/application/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src-tauri/src/features/folders/domain/: errors.rs  folder.rs  mod.rs  repository.rs
src-tauri/src/features/folders/infrastructure/: filesystem_repository.rs  mod.rs  tauri_commands.rs
src-tauri/src/features/notes/application/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src-tauri/src/features/notes/domain/: errors.rs  mod.rs  note.rs  repository.rs
src-tauri/src/features/notes/infrastructure/: filesystem_repository.rs  mod.rs  tauri_commands.rs
src-tauri/src/features/search/application/: delete.rs  index.rs  mod.rs  search.rs
src-tauri/src/features/search/domain/: error.rs  mod.rs  search.rs
src-tauri/src/features/search/infrastructure/: mod.rs  search_repository.rs
src-tauri/src/features/settings/application/: create.rs  get.rs  update.rs
src-tauri/src/features/settings/domain/: repository.rs
src-tauri/src/features/settings/infrastructure/: mod.rs  settings_repository.rs  tauri_commands.rs
src-tauri/src/features/space/: mod.rs
src-tauri/src/features/theming/: mod.rs
src-tauri/src/shared/: mod.rs
src-tauri/src/shared/errors/: app_errors.rs
src-tauri/src/shared/logger/: logger.rs
src-tauri/src/shared/repositories/: filesystem_repository.rs  mod.rs
src-tauri/src/shared/state/: state.rs
src-tauri/src/shared/utils/: atomic_write.rs  id_generator.rs  merge_values.rs  mod.rs
src-tauri/tests/: list_notes.rs
src-tauri/tests/mocks/: mod.rs  notes_mock.rs
(+203 files in other folders)
