[package]
name = "merino"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "merino_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.47.0"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
uuid = { version = "1.9", features = ["v4"] }
serde_yaml = "0.9.34"
frontmatter = "0.4.0"
lazy_static = "1.5.0"
regex = "1.11.1"
extract-frontmatter = "4.1.1"
ollama-rs = { version = "0.3.2", features = ["stream"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"

