[package]
name = "merino"
version = "0.1.0"
description = "The next gen note taking app built for privacy and speed"
authors = ["glitchedslimy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "merino_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.47.0"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde_yaml = "0.9.34"
regex = "1.11.1"
thiserror = "2.0.14"
async-trait = "0.1.88"
log = "0.4.27"
chrono = "0.4.41"
rand = "0.9.2"
agentai = "0.1.5"
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
ollama-rs = {version = "0.3.2", features = ["stream"] }
tantivy = "0.25.0"
reqwest = "0.12.23"
scraper = "0.24.0"

